--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>ui kit</title>
-        <link rel="stylesheet" href="/style.css" />
+        <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" >
     (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
     m[i].l=1*new Date();
@@ -137,6 +137,6 @@
 
             <div class="divider"></div>
         </div>
-        <script src="/index.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
