Добавила параметры(с иерархией) цели

--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
          
     </div>
     <div class="link__test">
-        <a href="/index.html" class="link__test-new">Назад</a>
+        <a href="index.html" class="link__test-new">Назад</a>
     </div>
 </div>
     <div class="divider"></div>
