Добавила параметры(с иерархией) цели строкой

--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
             
             <div class="divider"></div>
             <div class="form">
-                <form id="myForm" action="#" method="post" onsubmit="ym(103646379, 'reachGoal', 'order_zakaz', {
+                <form id="myForm" action="#" method="post" onsubmit="ym(97497263, 'reachGoal', 'order_zakaz', {
                     order_id: {
                         1: {
-                            order_price: orderPrice,
-                            currency: currency
+                            order_price: '1000',
+                            currency: 'RUB'
                     }
                     }
                     });">
