--- a/info.html
+++ b/info.html
@@ -35,7 +35,7 @@
     
     <div class="divider"></div>
     <div class="form">
-        <form id="myForm" action="#" method="post">
+        <form id="myForm2" action="#" method="post">
             <label for="name">Имя:</label>
             <input type="text" id="name" name="name"><br><br>
           
