--- a/index.html
+++ b/index.html
@@ -108,7 +108,19 @@
                         Lorem ipsum dolor sit amet.
                     </li>
                 </ol>
-                <a href="#" class="price__btn">Buy</a>
+                <a 
+                href="#" 
+                class="price__btn" 
+                onclick="ym(97497263, 'params', { 
+                    level1_1: {
+                      level2_1: {
+                        level3_1: 'parametr_1' ,
+                        level3_2: 'parametr_2',
+                        symbols: '/ |  ? ! * --: '
+                      },
+                     
+                    }
+                  })">Buy</a>
             </div>
 
             <div class="divider"></div>
