--- a/index.html
+++ b/index.html
@@ -159,6 +159,50 @@
                   </form>
             </div>
             <div class="divider"></div>
+            <div class="article-grid">
+                <div class="article-card">
+                    <div class="article-content">
+                        <h3>Как ИИ манипулирует человеческим сознанием</h3>
+                        <p>Новейшие алгоритмы способны анализировать поведение пользователей и подбирать контент, который изменяет их мнение без осознания этого факта...</p>
+                        <div class="article-meta">
+                            <span>12.08.2025</span>
+                            <div class="reaction-buttons">
+                                <button class="like-btn">👍 24</button>
+                                <button class="dislike-btn">👎 5</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="article-card">
+                    <div class="article-content">
+                        <h3>ИИ в медицине: спаситель или убийца?</h3>
+                        <p>Случаи ошибочных диагнозов, поставленных искусственным интеллектом, участились. В 12% случаев рекомендации ИИ приводили к ухудшению состояния пациентов...</p>
+                        <div class="article-meta">
+                            <span>05.08.2025</span>
+                            <div class="reaction-buttons">
+                                <button class="like-btn">👍 42</button>
+                                <button class="dislike-btn">👎 8</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="article-card">
+                    <div class="article-content">
+                        <h3>Тайные эксперименты с ИИ: что скрывают корпорации</h3>
+                        <p>Утечки документов подтверждают, что крупные tech-компании проводят эксперименты с ИИ, выходящие за рамки этических норм. Насколько далеко они зашли?</p>
+                        <div class="article-meta">
+                            <span>28.07.2025</span>
+                            <div class="reaction-buttons">
+                                <button class="like-btn">👍 87</button>
+                                <button class="dislike-btn">👎 12</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="divider"></div>
             <div class="ui__title">Icons</div>
             <div class="social">
                 <a href="#" class="social__icon">l</a>
