--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             
-            <div class="article-card">
+            <div class="article-card medcine super-info">
                 <div class="article-content">
                     <h3>ИИ в медицине: спаситель или убийца?</h3>
                     <p>Случаи ошибочных диагнозов, поставленных искусственным интеллектом, участились. В 12% случаев рекомендации ИИ приводили к ухудшению состояния пациентов...</p>
@@ -93,6 +93,8 @@
         </div>
 
         <div class="divider"></div>
+
+        
 
     </div>
     <div class="link__test">
