--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
             <div class="link__test">
                 <a href="info.html" class="link__test-new">Вторая страница</a>
             </div>
+            <div class="link__test">
+                <a href="https://page1.ru/?utm_source=source" class="link__test-new">Третья страница, которой нет</a>
+            </div>
             <div class="btn__test">
                 <button class="btn__test-new">Button</button>
             </div>
