--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
                      
                     }
                   })">Buy</a>
+                  <a 
+                  href="#" 
+                  class="price__btn" 
+                  onclick="ym(97497263, 'params', { 
+                          par_1: 'parametr_1' ,
+                          par_2: 'parametr_2' ,
+                          par_3: 'parametr_3' ,
+                          par_4: 'parametr_4' ,
+                          par_5: 'parametr_5' ,
+                          par_6: 'parametr_6' ,
+                          par_7: 'parametr_7' ,
+                          par_8: 'parametr_8' ,
+                          par_9: 'parametr_9' ,
+                          par_10: 'parametr_10' ,
+                          par_11: 'parametr_11' ,
+                  }
+                        )">Params</a>
             </div>
 
             <div class="divider"></div>
